--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
         "lint-fix": "eslint --fix -c .eslintrc.json --ext .ts ./src"
     },
     "devDependencies": {
-        "@jbuncle/eslint-config-jbuncle": "^1.6.0",
-        "@types/node": "^14.14.27",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.1.5"
+        "@types/node": "^18.11.9",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.3"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@jbuncle/eslint-config-jbuncle": "github:jbuncle/eslint-config-jbuncle"
+    }
 }
