--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build-and-tag:
     stage: build
     before_script:
         - npm config set strict-ssl false
-        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm-private/
+        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm/
     script:
         - npm install
         - npm run build
@@ -25,7 +25,7 @@ pack:
     stage: build
     before_script:
         - npm config set strict-ssl false
-        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm-private/
+        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm/
     script:
         - npm install
         - npm run build
