--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ build-and-tag:
     stage: build
     before_script:
         - npm config set strict-ssl false
-        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm/
     script:
         - npm install
         - npm run build
@@ -25,7 +24,6 @@ pack:
     stage: build
     before_script:
         - npm config set strict-ssl false
-        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm/
     script:
         - npm install
         - npm run build
@@ -40,11 +38,10 @@ publish:
     stage: deploy
     before_script:
         - npm config set strict-ssl false
-        - npm config set registry https://nexus.jbuncle.co.uk/repository/npm-private/
     script:
         - RELEASE="$(ls *.tgz | tail -n 1)"
         - echo $RELEASE
-        - npm publish $RELEASE
+        - npm publish $RELEASE --@jbuncle:registry https://nexus.jbuncle.co.uk/repository/npm-private/
     only:
         - tags
     dependencies: 
