--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ publish:
     script:
         - RELEASE="$(ls *.tgz | tail -n 1)"
         - echo $RELEASE
-        - npm publish $RELEASE --@jbuncle:registry https://nexus.jbuncle.co.uk/repository/npm-private/
+        - npm publish $RELEASE --@jbuncle:registry=https://nexus.jbuncle.co.uk/repository/npm-private/
     only:
         - tags
     dependencies: 
