--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
         "lint-fix": "eslint --fix -c .eslintrc.json --ext .ts ./src"
     },
     "devDependencies": {
+        "@jbuncle/eslint-config-jbuncle": "github:jbuncle/eslint-config-jbuncle",
         "@types/node": "^18.11.9",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3"
-    },
-    "dependencies": {
-        "@jbuncle/eslint-config-jbuncle": "github:jbuncle/eslint-config-jbuncle"
     }
 }
